# WVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
packaging/: io.github.lunastev.WVM.desktop
scripts/: install.sh  package.sh
src/: Commands.cpp  Commands.hpp  HostCapabilities.cpp  HostCapabilities.hpp  ProcessRunner.cpp  ProcessRunner.hpp  QemuCommandBuilder.cpp  QemuCommandBuilder.hpp  QmpClient.cpp  QmpClient.hpp  VMConfig.cpp  VMConfig.hpp  main.cpp
src/gui/: MainWindow.cpp  MainWindow.hpp  main.cpp
tests/: LegacyConfig.xml  WvmTests.cpp
